--- a/backend/package.json
+++ b/backend/package.json
@@ -6,21 +6,28 @@
   "type": "module",
   "scripts": {
     "dev": "tsx watch ./src/server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "knex": "node --import tsx ./node_modules/.bin/knex"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^24.6.1",
-    "get-tsconfig": "^4.10.1",
-    "prisma": "^6.16.3",
+    "@types/node": "^24.6.2",
+    "tsup": "^8.5.0",
     "tsx": "^4.20.6",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "undici-types": "^7.16.0"
   },
   "dependencies": {
-    "@prisma/client": "^6.16.3",
+    "@fastify/cookie": "^11.0.2",
     "dotenv": "^17.2.3",
-    "fastify": "^5.6.1"
+    "fastify": "^5.6.1",
+    "get-tsconfig": "^4.10.1",
+    "knex": "^3.1.0",
+    "pg": "^8.16.3",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7",
+    "zod": "^4.1.11"
   }
 }
