--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch ./src/server.ts",
+    "dev": "bun --watch ./src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "knex": "node --import tsx ./node_modules/.bin/knex"
   },
@@ -13,17 +13,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^24.6.2",
-    "tsup": "^8.5.0",
-    "tsx": "^4.20.6",
-    "typescript": "^5.9.3",
-    "undici-types": "^7.16.0"
+    "typescript": "^5.9.3"
   },
   "dependencies": {
     "@fastify/cookie": "^11.0.2",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^24.9.1",
     "dotenv": "^17.2.3",
     "fastify": "^5.6.1",
     "get-tsconfig": "^4.10.1",
+    "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "pg": "^8.16.3",
     "sqlite": "^5.1.1",
