--- a/backend/package.json
+++ b/backend/package.json
@@ -17,8 +17,10 @@
   },
   "dependencies": {
     "@fastify/cookie": "^11.0.2",
+    "@types/bcrypt": "^6.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.9.1",
+    "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
     "fastify": "^5.6.1",
     "get-tsconfig": "^4.10.1",
